[gd_scene load_steps=5 format=3 uid="uid://bw0s0f8kg8nnm"]

[ext_resource type="Theme" uid="uid://dlhcpidg6dmi8" path="res://Art/Themes/TalentTreeTheme.tres" id="1_sk6y2"]
[ext_resource type="Texture2D" uid="uid://chc63qeiocuuu" path="res://Art/Mori no oku no kakurezato/Skill Icon/Resized/fire_02.png" id="2_oj835"]
[ext_resource type="Script" path="res://Scenes/TalentTree/talent_button.gd" id="2_pyu0v"]
[ext_resource type="Script" path="res://Scenes/TalentTree/IconContainer.gd" id="3_dnaii"]

[node name="TalentButton" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource("2_pyu0v")

[node name="IconContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("1_sk6y2")
script = ExtResource("3_dnaii")

[node name="TalentTexture" type="Button" parent="IconContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
icon = ExtResource("2_oj835")
flat = true
icon_alignment = 1
expand_icon = true

[node name="StackLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "TEST"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="IconContainer/TalentTexture" to="." method="_on_talent_texture_pressed"]
